[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entity/Yoink/Yoink.gd" type="Script" id=1]
[ext_resource path="res://Entity/Assets/key.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/BoldSmall.tres" type="DynamicFont" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "yoink"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("YoinkCircle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.307786, 0.25 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.217638, 0.535887 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YoinkCircle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "yoink"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("YoinkCircle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.307786, 0.25 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.217638, 0.535887 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YoinkCircle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Yoink" type="Node2D"]
position = Vector2( 0, -2 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="YoinkCircle" type="Sprite" parent="."]
visible = false
modulate = Color( 0.439216, 0.658824, 0.32549, 0.611765 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -194.868
margin_top = 50.8353
margin_right = 202.132
margin_bottom = 88.8353
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YoinkAnimation" type="AnimationPlayer" parent="."]
anims/yoink = SubResource( 2 )

[node name="YoinkAnimation2" type="AnimationPlayer" parent="."]
anims/yoink = SubResource( 3 )

[node name="YoinkSound" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
pitch_scale = 1.5

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="YoinkAnimation" to="." method="_on_YoinkAnimation_animation_finished"]
[connection signal="animation_finished" from="YoinkAnimation2" to="." method="_on_YoinkAnimation_animation_finished"]
